--- a/Index.rmd
+++ b/Index.rmd
@@ -1,7 +1,6 @@
 ---
 title: "Index"
 author: "Rubens Cabral da Rocha"
-date: "05/10/2019"
 output: html_document
 ---
 
@@ -14,7 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 O objetivo é entender o uso de modelos de classificação tomando como base o dataset Iris do R.
 
 ## Dataset Iris
-```{r iris}
+```{r iris, paged.print=TRUE}
 summary(iris)
 ```
 
@@ -22,7 +21,7 @@ summary(iris)
 
 Para este caso precisaremos instalar a biblioteca [kohonen](https://cran.r-project.org/web/packages/kohonen/index.html)
 
-```{r kohonen}
+```{r kohonen, message=FALSE, warning=FALSE}
 install.packages("kohonen")
 ```
 
@@ -88,14 +87,14 @@ coolBlueHotRed <- function(n, alpha = 1) {rainbow(n, end=4/6, alpha=alpha)[n:1]}
 plot(iris.som, type = "property", property = iris.som$codes[[1]][,3], main=names(iris.som$data)[3], palette.name=coolBlueHotRed)
 ```
 
-Comprimento da sétala
+Comprimento da sépala
 
 ```{r}
 coolBlueHotRed <- function(n, alpha = 1) {rainbow(n, end=4/6, alpha=alpha)[n:1]}
 plot(iris.som, type = "property", property = iris.som$codes[[1]][,2], main=names(iris.som$data)[2], palette.name=coolBlueHotRed)
 ```
 
-#Largura da sétala
+#Largura da sépala
 
 ```{r}
 coolBlueHotRed <- function(n, alpha = 1) {rainbow(n, end=4/6, alpha=alpha)[n:1]}
